fix(styles): fix border-radius on text inputs on safari

--- a/components/newsletter-signup.module.scss
+++ b/components/newsletter-signup.module.scss
@@ -19,6 +19,7 @@
 }
 
 .input {
+	-webkit-appearance: none;
 	appearance: none;
 	background: lib.$color-foreground;
 	color: lib.$color-background;
